structural-typing/tests/ui/select_invalid_prefix.stderr
error: Invalid prefix '+' in select!. Did you mean to use modify!?
  --> tests/ui/select_invalid_prefix.rs:3:1
   |
 3 | #[structural]
   | ^^^^^^^^^^^^^
...
10 |     type Invalid = user::select!(+name);
   |                    -------------------- in this macro invocation
   |
   = note: this error originates in the macro `__user__select_name` which comes from the expansion of the macro `user::select` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Invalid prefix '+' in select!. Did you mean to use modify!?
  --> tests/ui/select_invalid_prefix.rs:3:1
   |
 3 | #[structural]
   | ^^^^^^^^^^^^^
...
10 |     type Invalid = user::select!(+name);
   |                    -------------------- in this macro invocation
   |
   = note: this error originates in the macro `__user__select_email` which comes from the expansion of the macro `user::select` (in Nightly builds, run with -Z macro-backtrace for more info)
